# SignMotionRefinement

./: .gitignore  MIGRATION_MANIFEST.json  README.md  pyproject.toml  smr.py
artifacts/: README.md
assets/: blank_text_tokens.npz
configs/: guava_mask_aware_meta_c2_fk_jerk_finetune.yaml  guava_mask_aware_meta_c2_fk_jerk_guava_self_finetune.yaml  guava_mask_aware_meta_finetune.yaml  guava_self_only_meta_c2_fk_jerk.yaml
docs/: guava_four_panel_comparison_visualization.md  guava_mask_aware_meta_implicit_finetuning.md  migration.md  reference_flow_training_dataset_format.md
integrations/guava/: README.md  compose_guava_motion_comparison.py  render_guava_compact_motion.py
src/sign_motion_refinement/: __init__.py  config.py  features.py  model_factory.py  paths.py  render.py  text_encoder.py
src/sign_motion_refinement/cli/: __init__.py  complete.py  evaluate_jerk.py  evaluate_meta.py  run_bounded_pilot.py  train_guava_only.py  train_mask_aware.py
src/sign_motion_refinement/data/: __init__.py  guava.py
src/sign_motion_refinement/geometry/: __init__.py  rotation.py  smplx_fk.py
src/sign_motion_refinement/models/: __init__.py  baselines.py  meta_implicit.py  siren.py
src/sign_motion_refinement/pipeline/: __init__.py  gap.py  losses.py  scaffold.py  self_supervision.py  temporal.py
src/sign_motion_refinement/visualization/: __init__.py  completion_compare.py  linear_siren_jerk.py  meta_jerk.py
tests/: test_guava_mask_aware_temporal.py  test_guava_masked_self_supervision.py  test_guava_missing_frame_completion.py  test_guava_self_only_meta.py
